# bank-gnucash

./: .gitignore  README.md  app.py  flake.nix  pyproject.toml
scripts/: convert_ui.sh
src/: rsv.py
src/stubs/: tab_content.pyi  window.pyi
src/ui/: tab_content.py  window.py
src/ui_logic/: tab_content.py  window.py
ui/: tab_content.ui  window.ui
