[tool.poetry]
name = "bank-gnucash"
version = "0.1.0"
description = "Ayuda a conciliar estados de cuenta para exportar a GNU Cash"
authors = ["Jorge Javier Araya Navarro <jorge@esavara.cr>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
poethepoet = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "src/stubs"

[[tool.mypy.overrides]]
module = ["PySide2.*"]
ignore_missing_imports = true

[tool.poe.tasks]
convert-ui = "scripts/convert_ui.sh ./ui ./src/ui"
mypy = "stubgen -o src/stubs src/ui"
run = "python app.py"
